# wingpanel-indicator-weather

./: .gitignore  README.md  meson.build
.github/workflows/: main.yml
data/: Application.css  com.github.casasfernando.wingpanel-indicator-weather.appdata.xml.in  com.github.casasfernando.wingpanel-indicator-weather.desktop.in  com.github.casasfernando.wingpanel-indicator-weather.gresource.xml  com.github.casasfernando.wingpanel-indicator-weather.gschema.xml
data/icons/: icons.indicator.gresource.xml
debian/: changelog  control  copyright  rules
po/: POTFILES  com.github.casasfernando.wingpanel-indicator-weather.pot  de.po  es.po  fr.po  it.po  meson.build  nl.po  pl.po  pt.po
po/extra/: LINGUAS  POTFILES  de.po  es.po  extra.pot  fr.po  it.po  nl.po  pl.po  pt.po
src/: Application.vala  Indicator.vala  MainWindow.vala  meson.build
src/Services/: Weather.vala
src/Widgets/: ComboRow.vala  DisplayWidget.vala  IndicatorWidget.vala  PopoverWidget.vala  PopoverWidgetRow.vala  PopoverWidgetRowIconic.vala  SettingsDialog.vala  SpinRow.vala  Toggles.vala
