executable_sources = files (
    'Application.vala',
    'MainWindow.vala',

    'Widgets/ComboRow.vala',
    'Widgets/PopoverWidgetRow.vala',
    'Widgets/SpinRow.vala',
    'Widgets/Toggles.vala'
)

indicator_sources = files (
    'Indicator.vala',

    'Services/Weather.vala',

    'Widgets/DisplayWidget.vala',
    'Widgets/IndicatorWidget.vala',
    'Widgets/PopoverWidget.vala',
    'Widgets/PopoverWidgetRow.vala',
    'Widgets/PopoverWidgetRowIconic.vala'
)
