sources = files (
    'Indicator.vala',

    'Services/Weather.vala',

    'Widgets/ComboRow.vala',
    'Widgets/DisplayWidget.vala',
    'Widgets/IndicatorWidget.vala',
    'Widgets/PopoverWidget.vala',
    'Widgets/PopoverWidgetRow.vala',
    'Widgets/PopoverWidgetRowIconic.vala',
    'Widgets/SettingsDialog.vala',
    'Widgets/SpinRow.vala',
    'Widgets/Toggles.vala'
)
